--- a/djangoweb/products/templates/products/sob_medida_page.html
+++ b/djangoweb/products/templates/products/sob_medida_page.html
@@ -5,7 +5,7 @@
 
     {% include "website/partials/_hero-content.html" with is_sob_medida_page=True %}
 
-    <div class="content-products">
+    <div class="content-products-custom">
 
         <div class="container">
 
