--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -1923,13 +1923,17 @@ a {
     }
 
     .hero-content h1 {
-        padding: 2rem 0;
+        padding: 2rem 0 1rem;
         margin: 0;
         font-size: 2.8rem;
     }
 
+    .hero-content h2 {
+        margin: 1.5rem auto .5rem;
+    }
+
     .hero-content p {
-        margin: 0 0 1.575rem 0;
+        margin: 0 0 1.3rem 0;
         font-size: 1.25rem;
     }
 
@@ -1943,20 +1947,47 @@ a {
         font-size: 2.25rem;
     }
 
+    .hero-content h2 {
+        font-size: 1.7rem;
+        margin: 1.5rem auto .5rem;
+    }
+
     .hero-content p {
-        font-size: 1.01rem;
+        font-size: 1.2rem;
     }
 
 }
 
 @media (max-width: 550px) {
 
+    .hero-content h1 {
+        font-size: 2rem;
+    }
+
     .categories-grid {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
+@media (max-width: 490px) {
+
+    .hero-content h1 {
+        padding: 1.5rem 0 .5rem;
+        font-size: 1.8rem;
+    }
+
+    .hero-content h2 {
+        font-size: 1.75rem;
+        margin: 0 0 .75rem;
+    }
+}
+
 @media (max-width: 450px) {
+
+    .hero-content h1 {
+        font-size: 2rem;
+        padding: 1.7rem 0 1rem;
+    }
 
     .categories-title {
         font-size: 1.75rem;
@@ -1971,6 +2002,22 @@ a {
     }
 
     .card-content h3 {
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 360px) {
+    .hero-content h1 {
+        font-size: 1.55rem;
+        padding: 1.5rem 0 1rem;
+    }
+
+    .hero-content h2 {
+        font-size: 1.4rem;
+        margin: .75rem auto .75rem;
+    }
+
+    .hero-content p {
         font-size: 1rem;
     }
 }
@@ -1993,8 +2040,17 @@ a {
 /* -------- ORDERING --------- */
 
 .ordering {
-    padding: 1.5rem 0;
-    text-align: right;
+    padding: 0;
+    margin: 0;
+}
+
+.ordering form {
+    display: flex;
+    gap: 1rem;
+}
+
+.ordering form label{
+    width: max-content;
 }
 
 .ordering select {
@@ -2009,6 +2065,8 @@ a {
 .list-title h2 {
     text-align: center;
     font-size: 2.5rem;
+    padding: 2rem;
+    margin: 0;
 }
 
 
@@ -2288,6 +2346,14 @@ a {
 }
 
 @media (max-width: 650px) {
+
+    .ordering {
+        padding: 0;
+    }
+
+    .list-title h2 {
+        padding: 1.25rem;
+    }
     
     .card-product-actions .btn-group-inline {
         flex-direction: row;
@@ -2345,9 +2411,8 @@ a {
         padding: 0 0.5rem 1.2rem;
     }
 
-    .hero-content h1 {
-        font-size: 2rem;
-        padding: 1.7rem 0;
+    .hero-content p {
+        line-height: 1.3;
     }
 
     .ordering label {
@@ -2729,8 +2794,33 @@ a {
     margin-top: 100px;
 }
 
-.content-products {
+.content-products-custom {
     background-color: var(--color-light);
+    
+}
+
+.content-products-custom .breadcrumb {
+    padding: .75rem 0 0;
+}
+
+.content-products-custom .container {
+    width: 95%;
+}
+
+.content-products {
+    width: 100%;
+    padding: 0.5rem 0;
+    background-color: var(--color-light);
+}
+
+.content-products .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.product-header-container {
+    gap: 1rem;
 }
 
 .content-products-list {
@@ -2747,7 +2837,7 @@ a {
     flex-wrap: wrap;
     font-size: .9rem;
     color: var(--color-primary-dark);
-    padding: 1rem 0 0;
+    padding: 0;
     font-weight: bold;
     gap: .3rem;
 }
@@ -2778,6 +2868,17 @@ a {
 
     .content-products-detail .breadcrumb li {
         padding: 0 .15rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .content-products .container {
+        flex-wrap: wrap;
+        gap: .5rem;
+    }
+
+    .ordering {
+        padding-left: 1.2rem;
     }
 }
 
@@ -2964,14 +3065,13 @@ a {
     display: grid;
     gap: var(--space-xl);
     padding-bottom: var(--space-xl);
-    margin-top: 3rem;
 }
 
 .custom-made-form {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: var(--space-xl);
-    padding: var(--space-lg);
+    padding: var(--space-md);
     border-radius: var(--border-radius);
 }
 
@@ -3113,10 +3213,10 @@ a {
 }
 
 
-/* --- Responsividade da Página Sob Medida --- */
+/* --- Responsiveness Page Sob Medida --- */
 
 @media (max-width: 1024px) {
-    /* Em telas médias, passa o layout principal para 1 coluna */
+
     .custom-made-layout {
         grid-template-columns: 1fr;
         margin-top: 2rem;
@@ -3124,9 +3224,8 @@ a {
 
     .custom-made-form {
         grid-template-columns: 1fr;
-        width: 700px;
-        margin-left: auto;
-        margin-right: auto;
+        width: 100%;
+        margin: 0 auto;
     }
 
     .custom-made-gallery {
@@ -3149,13 +3248,13 @@ a {
 
     .custom-made-layout {
         max-width: 100%;
+        margin-top: 0;
     }
 
     .custom-made-form {
         margin: 0;
         width: 100%;
     }
-
 
 }
 
