Link to direct user to the portfolio page.

--- a/djangoweb/products/templates/products/sob_medida_page.html
+++ b/djangoweb/products/templates/products/sob_medida_page.html
@@ -77,7 +77,7 @@
 
                 </div>
 
-                <div class="custom-made-gallery">
+                <div id="portfolio" class="custom-made-gallery">
                     <h3>Nosso Portfólio</h3>
                     
                     <div class="gallery-grid">
