--- a/djangoweb/website/templates/website/partials/_hero-content.html
+++ b/djangoweb/website/templates/website/partials/_hero-content.html
@@ -9,28 +9,33 @@
             <p>Descreva sua necessidade e anexe seu desenho. Nossa equipe de engenharia entrará em contato.
             </p>
 
+            <a href="#portfolio" class="hero-scroll-link">
+                <i class="fas fa-chevron-down"></i> Veja alguns projetos realizados
+            </a>
+
         {% else %}
 
             <h1>Encontre o produto ideal para o seu projeto</h1>
             <p>Qualidade, design e funcionalidade reunidos em um só lugar.</p>
 
+            
+            <form class="search-bar" action="{% url "products:products-search" %}" method="get" title="Pesquisar">
+
+                <input type="text" name="q" placeholder="Pesquisar produtos..." />
+                <button type="submit">
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 24 24" 
+                        width="22" height="22"
+                        fill="currentColor">
+
+                        <path d="M10 2a8 8 0 015.293 13.707l4 4a1 1 0 01-1.414 1.414l-4-4A8 8 0 1110 2zm0 2a6 6 0 100 12 6 6 0 000-12z"/>
+                    </svg>
+
+                </button>
+
+            </form>
+
         {% endif %}
     </div>
-
-    <form class="search-bar" action="{% url "products:products-search" %}" method="get" title="Pesquisar">
-
-        <input type="text" name="q" placeholder="Pesquisar produtos..." />
-        <button type="submit">
-            <svg xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24" 
-                width="22" height="22"
-                fill="currentColor">
-
-                <path d="M10 2a8 8 0 015.293 13.707l4 4a1 1 0 01-1.414 1.414l-4-4A8 8 0 1110 2zm0 2a6 6 0 100 12 6 6 0 000-12z"/>
-            </svg>
-
-        </button>
-
-    </form>
 
 </section>
