--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -3291,10 +3291,6 @@ a {
         font-size: .9rem;
     }
 
-    .gallery-grid {
-        grid-template-columns: 1fr;
-    }
-
     .custom-made-form h3,
     .custom-made-gallery h3 {
         font-size: 1.5rem;
@@ -3307,5 +3303,15 @@ a {
     .hero.content h2 {
         margin: 1rem auto 0;
         font-size: 1.7rem;
+    }
+
+    .gallery-item-content {
+        padding: var(--space-sm);
+    }
+}
+
+@media (max-width: 400px) {
+    .gallery-item p {
+        font-size: 0.75rem;
     }
 }
