--- a/djangoweb/website/templates/website/pages/who_we_are.html
+++ b/djangoweb/website/templates/website/pages/who_we_are.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    <div class="content-who-are">
+    <div class="content-breadcrumb">
         {% include "website/partials/_breadcrumbs.html" %}
     </div>
 
