--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -2094,10 +2094,18 @@ a {
 
 }
 
+.card-product-image {
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    overflow: hidden;
+    background-color: var(--color-light);
+}
+
 .card-product-image img {
     width: 100%;
+    height: 100%;
     border-radius: var(--border-radius);
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .card-product-content{
